@@ -156,7 +156,14 @@ Changes to the Mercury standard library
    - The `digraph_key(T)` type is now an instance of the `uenum` typeclass,
      and is no longer an instance of the `enum` typeclass.
 
-* We have fixed the implementations of `digraph.tc` and `digraph.rtc`.
+* The following functions have been added:
+
+    - func `symmetric_closure/1`            (synonym for `sc/1`)
+    - func `transitive_closure/1`           (synonym for `tc/1`)
+    - func `reflexive_transitive_closure/1` (synonym for `rtc/1`)
+
+* We have fixed and improved the implementations of transitive closure and
+  reflexive transitive closure.
 
 ### Changes to the `enum` module
 
